--- a/css/maratona.css
+++ b/css/maratona.css
@@ -110,7 +110,7 @@ ul li {
 }
 
 body{
-   /* background-image: url('/imagens/perfil/fundo.jpg') */
+  
    background-color: #1C1C1C;
    
 }
@@ -175,4 +175,83 @@ div{
 .hr-footer{
     width: 100%;
     height: 1px;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar-container {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .navbar-menu {
+        flex-direction: row; 
+        gap: 10px; 
+        justify-content: center; 
+    }
+
+    .navbar-logo img {
+        height: 80px; 
+    }
+
+    .navbar-link {
+        font-size: 16px; 
+    }
+
+    .titulo-carrosel {
+        margin-top: 50px; 
+    }
+
+    .pai-corrosel {
+        width: 100%; 
+        margin-top: 50px; 
+    }
+
+    .cabecalho {
+        width: 100%;
+        height: auto; 
+    }
+
+    .rodape {
+        flex-direction: column; 
+        margin-top: 10vh; 
+    }
+
+    
+    .hr-left,
+    .hr-right {
+        width: 40%;
+        height: 2px;
+        background-color: #fff;
+        margin: 0;
+    }
+
+    .titulo-carrosel {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .text-hr {
+        padding: 0 10px;
+        font-size: 30px; 
+        text-align: center; 
+        color: white;
+    }
+
+    .titulo-carrosel::before,
+    .titulo-carrosel::after {
+        content: '';
+        flex: 1;
+        height: 2px;
+        background-color: white;
+    }
+
+    .titulo-carrosel::before {
+        margin-right: 10px;
+    }
+
+    .titulo-carrosel::after {
+        margin-left: 10px;
+    }
 }
