--- a/css/produtos.css
+++ b/css/produtos.css
@@ -353,5 +353,54 @@
   }
 
   
+  @media only screen and (max-width: 768px) {
+    .navbar {
+        padding: 10px; 
+    }
+    
+    .navbar-container {
+        flex-direction: column; 
+        align-items: center; 
+        width: 100%; 
+        padding: 0 10px; 
+    }
+
+    .navbar-logo img {
+        height: 80px; 
+    }
+
+    .navbar-menu {
+        display: flex;
+        flex-direction: row;
+        gap: 10px; 
+        justify-content: center; 
+        padding: 0;
+        margin: 10px 0; 
+    }
+
+    .navbar-link {
+        font-size: 16px; 
+    }
+
+    .titulo-carrosel {
+        margin-top: 50px; 
+        width: 90vw; 
+        height: auto; 
+    }
+
+    .pai-corrosel {
+        width: 100%; 
+        margin-top: 50px; 
+    }
+
+    .hr-left,
+    .hr-right {
+        width: 100%; 
+    }
+
+    .text-hr {
+        font-size: 30px;
+    }
+}
 
   
